src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_uint32__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: UInt32,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: UInt32,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastUint32ToInt32(
            CastUint32ToInt32,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
